# EISC-207

./: .gitignore  BE1 - Hypotheses initiales.ipynb  BE2 - Levier Efficacite.ipynb  BE3 - Levier Decarbonation.ipynb  BE4 - AeroMAPS.ipynb  README.md  outputs.json  pyproject.toml  requirements.txt
Data/: Aviation_Data.csv  IRENA.csv  dispo-bio-2050.csv  dispo-elec-2050.csv  prod-elec.csv
